platforms/analytics/deployments/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tiki-analytics
  labels:
    app: tiki-analytics
spec:
  type: ClusterIP
  ports:
    - port: 8098
      targetPort: http
      protocol: TCP
      name: http
    - port: 9098
      targetPort: grpc
      protocol: TCP
      name: grpc
  selector:
    app: tiki-analytics
